adding logo to the top

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-    <mat-icon aria-hidden="false" (click)="sidenav.toggle()">list</mat-icon>
+    <img src="/assets/logo.png" alt="logo" (click)="sidenav.toggle()" class="logo">
     &nbsp;
     <span>dnd4j-ui</span>
 </mat-toolbar>
