--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -1,42 +1,66 @@
 <mat-card>
-  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+  <mat-card-title>
+    Items 
+  </mat-card-title>
+  <mat-card-content>
+    <mat-form-field>
+      <mat-label>Search</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Item name" #input>
+    </mat-form-field>
 
-    <!--- Note that these columns can be defined in any order.
+    <table mat-table [dataSource]="dataSource" matSort  class="mat-elevation-z8" multiTemplateDataRows >
+
+      <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
-  
-    <!-- name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell mat-sort-header *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
-  
-    <!-- category Column -->
-    <ng-container matColumnDef="category">
-      <th mat-header-cell mat-sort-header *matHeaderCellDef> Category </th>
-      <td mat-cell *matCellDef="let element"> {{element.category}} </td>
-    </ng-container>
+
+      <!-- name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell mat-sort-header *matHeaderCellDef> Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
+
+      <!-- category Column -->
+      <ng-container matColumnDef="category">
+        <th mat-header-cell mat-sort-header *matHeaderCellDef> Category </th>
+        <td mat-cell *matCellDef="let element"> {{element.category}} </td>
+      </ng-container>
       <!-- type Column -->
       <ng-container matColumnDef="type">
         <th mat-header-cell mat-sort-header *matHeaderCellDef> Type </th>
         <td mat-cell *matCellDef="let element"> {{element.type}} </td>
       </ng-container>
-    <!-- Cost Column -->
-    <ng-container matColumnDef="cost">
-      <th mat-header-cell mat-sort-header *matHeaderCellDef> Cost </th>
-      <td mat-cell *matCellDef="let element"> {{element.cost}}  {{element.currency}}</td>
-    </ng-container>
+      <!-- Cost Column -->
+      <ng-container matColumnDef="cost">
+        <th mat-header-cell mat-sort-header *matHeaderCellDef> Cost </th>
+        <td mat-cell *matCellDef="let element"> {{element.cost}} {{element.currency}}</td>
+      </ng-container>
       <!-- Weight Column -->
       <ng-container matColumnDef="weight">
         <th mat-header-cell mat-sort-header *matHeaderCellDef> Weight </th>
         <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
       </ng-container>
-    <!-- description Column -->
-    <ng-container matColumnDef="description">
-      <th mat-header-cell mat-sort-header *matHeaderCellDef> Description </th>
-      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+      <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef> Description </th>
+        <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+          <div class="element-detail"
+              [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+            <div class="element-description">
+              {{element.description}}
+              <span class="element-description-attribution"></span>
+            </div>
+          </div>
+        </td>
+      </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let element; columns: displayedColumns;"
+      class="element-row"
+      [class.expanded-row]="expandedElement === element"
+      (click)="expandedElement = expandedElement === element ? null : element">
+  </tr>
+  <tr mat-row *matRowDef="let row; columns: ['description']" class="detail-row"></tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[10, 20, 50, 100]" showFirstLastButtons style="margin-top: 40px;"></mat-paginator>
+  </mat-card-content>
 </mat-card>
