adding in spells and formatting text

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-    <img src="/assets/logo.png" alt="logo" (click)="sidenav.toggle()" class="logo">
+    <img src="assets/logo.png" alt="logo" (click)="sidenav.toggle()" class="logo">
     &nbsp;
     <span>dnd4j-ui</span>
 </mat-toolbar>
@@ -8,6 +8,7 @@
         <mat-nav-list>
             <a mat-list-item routerLink="/dashboard" > Dashboard </a>
             <a mat-list-item routerLink="/items">Items</a>
+            <a mat-list-item routerLink="/spells">Spells</a>
          </mat-nav-list>
     </mat-sidenav>
   
