--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,6 @@
-<mat-card><p>dashboard works!</p></mat-card>
+<mat-card>
+    <mat-card-title>Welcome</mat-card-title>
+    <mat-card-content>
+        <p>This is a project to provide a bunch of d&d utilities</p>
+    </mat-card-content>
+</mat-card>
