--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -39,6 +39,12 @@
         <th mat-header-cell mat-sort-header *matHeaderCellDef> Weight </th>
         <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
       </ng-container>
+
+            <!-- Source Column -->
+            <ng-container matColumnDef="source">
+              <th mat-header-cell mat-sort-header *matHeaderCellDef> Source </th>
+              <td mat-cell *matCellDef="let element"> {{element.source}} </td>
+            </ng-container>
       <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
       <ng-container matColumnDef="description">
         <th mat-header-cell *matHeaderCellDef> Description </th>
@@ -46,7 +52,7 @@
           <div class="element-detail"
               [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
             <div class="element-description">
-              {{element.description}}
+              <pre>  {{element.description}} </pre>
               <span class="element-description-attribution"></span>
             </div>
           </div>
