--- a/src/app/spells/spells.component.html
+++ b/src/app/spells/spells.component.html
@@ -60,7 +60,7 @@
             <div class="element-detail"
                 [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
               <div class="element-description">
-                <pre> {{element.description}} </pre>
+               {{element.description}}
                 <span class="element-description-attribution"></span>
               </div>
             </div>
